@@ -1,3 +1,7 @@
+2005-11-10  Adam Schreiber <sadam@clemson.edu>
+    * plugins/nautilus/seahorse-pgp-preferences.c: Fixed Assertion in load
+    due to themable icons
+
 2005-11-07  Adam Schreiber <sadam@clemson.edu>
     * src/seahorse-key-properties.c:
     * src/seahorse-key-properties.glade: Patch for primary and first
